# PoolTouhou

./: .gitignore  Cargo.toml  PoolTouhou.md  README.md
.github/workflows/: build.yml  linux.yml  mac.yml  rust.yml  win.yml
config/: display.ron
pool_script/: Cargo.toml  README.md
pool_script/examples/: main.pthpsb  normal.pthpsb  sp1.pthpsb
pool_script/src/: context.rs  expression.rs  game_data.rs  lib.rs  main.rs  pool_script.rs
pool_script_compiler/: Cargo.toml
pool_script_compiler/src/: main.rs
pooltouhou/: Cargo.toml
pooltouhou/res/assets/font/: license.txt
pooltouhou/res/assets/shaders/: blit.frag  blit.vert  circle.frag  circle.vert  normal2dtexture.frag  normal2dtexture.vert  normal3d.vert  waterwave.frag
pooltouhou/res/assets/texture/: mainbg.ron  sheepBullet.ron  zzzz.ron
pooltouhou/res/script/: delay.pthpsb  goin.pthpsb  kill.pthpsb  main.pthpsb  move.pthpsb  normal.pthpsb  red_sp1.pthpsb  sp1.pthpsb  zzzz_move.pthpsb
pooltouhou/src/: audio.rs  config.rs  handles.rs  input.rs  lib.rs  main.rs
pooltouhou/src/audio/: mod.rs
pooltouhou/src/component/: anime.rs  bullet.rs  invert_color_anime.rs  mod.rs  sheep.rs
pooltouhou/src/game/: anime.rs  bullet.rs  mod.rs
pooltouhou/src/render/: blit.rs  invert_color.rs  mod.rs  texture2d.rs  water_wave.rs
pooltouhou/src/script/: mod.rs  script_context.rs
pooltouhou/src/states/: gaming.rs  init.rs  load.rs  loading.rs  menu.rs  mod.rs  pausing.rs
pooltouhou/src/states/game/: mod.rs
pooltouhou/src/systems/: animation_system.rs  debug_system.rs  game_system.rs  mod.rs
pooltouhou/src/ui/: debug.rs  input.rs  mod.rs
pth-render-lib/: Cargo.toml
pth-render-lib/src/: lib.rs
pthapi/: Cargo.toml  build.rs
pthapi/src/: audio.rs  config.rs  game.rs  handles.rs  lib.rs  states.rs
pthapi/src/render/: blit.rs  mod.rs  texture2d.rs  water_wave.rs
pthapi/src/states/: init.rs  load.rs  mod.rs  pausing.rs
res/assets/shaders/: circle.frag  circle.vert
res/assets/texture/: bullet.ron
src/: handles.rs  input.rs  main.rs
src/component/: bullet.rs  sheep.rs
src/entities/: bullet.rs  mod.rs  sheep.rs
src/graphics/: inverse_color_pass.rs  mod.rs
src/render/: invert_color_pass.rs  mod.rs
src/states/: gaming.rs  mod.rs
src/systems/: debug_system.rs  game.rs  game_system.rs  mod.rs
src/ui/: debug.rs  mod.rs
