[package]
name = "test_rust"
version = "0.1.0"
authors = ["euOnmyoji <1418780411@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
amethyst = "0.15.0"
nalgebra = "0.19"

# https://amethyst.rs/doc

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]