[package]
name = "pool_script"
version = "0.1.0"
authors = ["euOnmyoji <1418780411@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
env_logger = "*"

[[bin]]
name = "psc"

[lib]
name = "pool_script"
crate-type = ["lib"]