[package]
name = "pooltouhou"
version = "0.1.0"
authors = ["euOnmyoji <1418780411@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "pooltouhou"

[dependencies]
#api
pthapi = { path = "../pthapi" }

#mix
env_logger = "*"
log = "*"
wgpu = { version = "0.10.1", features = ["spirv"] }
wgpu_glyph = "0.14.1"
winit = "0.24"
pollster = "0.2.3"
futures = { version = "*", features = ["thread-pool"] }
image = "*"
rayon = "*"
bytemuck = "*"
chrono = "*"
alto = "3.0.4"
shaderc = { version = "0.7", features = ["build-from-source"] }
pool_script = { path = "../pool_script" }
nalgebra = { version = "0.28.0", features = ["convert-bytemuck"] }
profiling = "1.0.3"

#audio
minimp3 = "0.5.1"
lewton = "0.10.2"


[features]
debug-game = []
profile = ["profiling/profile-with-optick"]