[package]
name = "pooltouhou"
version = "0.1.0"
authors = ["euOnmyoji <1418780411@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "pooltouhou"

[lib]
name = "pth"
crate-type = ["lib"]

[dependencies]
nalgebra = { version = "0.28.0", features = ["convert-bytemuck"] }
pool_script = { path = "../pool_script" }
bytemuck = "*"
image = "*"

minimp3 = "0.5.1"
lewton = "0.10.2"
alto = "3.0.4"

shaderc = { version = "0.7", features = ["build-from-source"] }
wgpu = { version = "0.10.1", features = ["spirv"] }
wgpu_glyph = "0.14.1"

rayon = "*"
chrono = "*"
profiling = "1.0.3"
pollster = "0.2.3"
futures = { version = "*", features = ["thread-pool"] }
env_logger = "*"
log = "*"
winit = "0.24"
# api
pthapi = { path = "../pthapi" }

[features]
debug-game = []
profile = ["profiling/profile-with-optick"]
